[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/UI/healthbar_enemy_empty.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/healthbar_enemy_full.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Born2bSportyV2.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scripts/ui/BossHealthBar.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[node name="BossHealthBarUI" type="CanvasLayer"]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="HealthBar" type="TextureProgress" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -180.0
margin_top = -89.0
margin_right = 180.0
margin_bottom = -29.0
value = 50.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
nine_patch_stretch = true

[node name="BossNameLabel" type="RichTextLabel" parent="Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -163.0
margin_top = -30.0
margin_right = 164.0
margin_bottom = 1.0
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][color=#ffd703]Sample name[/color]"
text = "Sample name"
scroll_active = false

[node name="WeaknessDisplayPosition" type="Position2D" parent="Control"]
position = Vector2( 396, 617 )
scale = Vector2( 1.5, 1.5 )
